# embryo-engine

./: .gitignore  Cargo.toml  DESIGN.md  README.md  avg.py  example_level1.blend1  foo  frame1.rdc  log  material_props  project-gilgamesh.cap  renderdoc.cap
.github/workflows/: rust.yml
assets/entities/: cube.blend  cube.blend1  cube.glb  emily.gltf  test.blend  test.blend1  test.glb
assets/levels/: example_level1.blend  example_level1.blend1  example_level1.glb  example_level1.gltf  example_level2.gltf
assets/shaders/: material.frag
data/: config.toml
data/models/: heroine.blend  heroine.blend1  heroine.glb  test.gltf
data/shaders/: "  average.comp  bloom.frag  camera.vert  font.frag  font.vert  gaussian.frag  hdr.frag  light.frag  light_camera.vert  luminance.comp  material.frag  material.frag.old  passthrough.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/imgui_opengl_renderer/: Cargo.toml
lib/imgui_opengl_renderer/src/: lib.rs
lib/imgui_sdl2_support/: Cargo.toml
lib/render_gl_derive/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: .emacs.desktop  camera.rs  dead_drop.rs  events.rs  interfaces.rs  main.rs  main.rse  render_thread.rs  render_thread.rse  resource_manager.rs  scene.rs  systems.rs  text.rs  triangle.frag  triangle.vert  update_thread.rs  update_thread.rse
src/entity/: camera_component.rs  hierarchy_component.rs  light_component.rs  mesh_component.rs  mod.rs  render_component.rs  terrain_component.rs  transform_component.rs  ui_component.rs
src/render_gl/: data.rs  mod.rs  objects.rs  resources.rs  shaders.rs  textures.rs
src/utils/: mod.rs  render_gl.rs  shaders.rs
