[package]
name = "embryo"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
keywords = ["gamedev", "graphics", "engine", "game", "data-driven", "scripting"]
categories = ["game-engines", "game-development", "graphics"]
publish = false

[dependencies]
gl = { path = "lib/gl" }
glam = "0.22.0"
rayon = "1.6.1"
rand = "0.8.5"
half = "2.3.1"
project_gilgamesh_render_gl_derive = { path = "lib/render_gl_derive" }
imgui = { version = "0.11.0", features = ["docking"] }
imgui-opengl-renderer = { path = "lib/imgui_opengl_renderer" }
imgui-sdl2-support = { path = "lib/imgui_sdl2_support" }
core_affinity = "0.8.1"
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
lazy_static = "1.4.0"
rmp = "0.8.12"
rmp-serde = "1.1.2"
physx = "0.19.0"
bytes = "1.5.0"
log = "0.4"
simplelog = "0.12.2"

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["image", "mixer", "use-pkgconfig", "static-link"]

[dependencies.gltf]
version = "1.3.0"
features = ["extras", "names", "utils", "import"]
